# MY-AITuber

./: .gitattributes  .gitignore  CLAUDE.md  README.md  package-lock.json
.github/workflows/: ai-review.yaml  claude.yml
.specstory/history/: 2025-06-03_19-24-この言葉の意味は何ですか.md  2025-06-06_06-53-これの意味を尋ねる.md  2025-06-06_22-36-fixing-github-app-installation-errors.md  2025-06-08_18-44-確認するプロジェクトディレクトリ.md  2025-06-08_20-39-全体像を把握してレポート作成.md  2025-06-09_08-53-リップシンクの同期問題を解決する.md  2025-06-09_12-29-タスクリストをtddで進める.md  2025-06-10_00-57-リップシンクの同期問題の方向性確認.md  2025-06-10_07-02-is-the-bug-fix-plan-correct.md  2025-06-10_07-54-方針の確認と修正提案.md  2025-06-11_21-47-レビューの依頼.md  2025-06-12_11-49-review-request-for-permission-bugfix.md  2025-06-12_12-36-バグ修正のタスクリスト検討.md
asd-aituber/: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json
asd-aituber/apps/api/: .env.example  pyproject.toml  run.py
asd-aituber/apps/api/app/: main.py
asd-aituber/apps/api/app/api/v1/: __init__.py
asd-aituber/apps/api/app/api/v1/endpoints/: chat.py  status.py
asd-aituber/apps/api/app/core/: config.py
asd-aituber/apps/api/app/models/: chat.py
asd-aituber/apps/api/app/services/: chat_service.py  emotion_service.py
asd-aituber/apps/api/tests/: test_chat_api.py  test_main.py
asd-aituber/docker/: api.dockerfile  web.dockerfile
asd-aituber/docs/: README.md  bugfix-plan.md  development-phases.md  echo-loop-audio-fix-plan.md  lipsync-bugfix.md  source-list.md
asd-aituber/scripts/: ci-certificates.js  dev-https.js  dev.sh  setup-https.js  setup.sh
(+147 files in other folders)
